[gd_scene load_steps=11 format=2]

[ext_resource path="res://assets/icons/menu_opened.png" type="Texture" id=1]
[ext_resource path="res://theme/thol_launcher_theme_1.tres" type="Theme" id=2]
[ext_resource path="res://assets/fonts/thol_launcher_default_font.tres" type="DynamicFont" id=3]
[ext_resource path="res://assets/fonts/thol_launcher_lineedit_font.tres" type="DynamicFont" id=4]
[ext_resource path="res://assets/_reusable/reset/Reset_Button.tscn" type="PackedScene" id=5]
[ext_resource path="res://theme/dropdown_button/dropdown_button_focus.tres" type="StyleBox" id=6]
[ext_resource path="res://theme/dropdown_button/dropdown_button_normal.tres" type="StyleBox" id=7]
[ext_resource path="res://theme/dropdown_button/dropdown_button_pressed.tres" type="StyleBox" id=8]
[ext_resource path="res://theme/dropdown_button/dropdown_button_hover.tres" type="StyleBox" id=9]
[ext_resource path="res://assets/unique/seeds/spawn_seed.gd" type="Script" id=10]

[node name="sed_seed_name" type="HBoxContainer"]
margin_top = 8.0
margin_right = 551.0
margin_bottom = 40.0
custom_constants/separation = 0
script = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="sed_sn_label" type="Label" parent="."]
margin_right = 275.0
margin_bottom = 32.0
size_flags_horizontal = 3
size_flags_vertical = 1
theme = ExtResource( 2 )
custom_colors/font_color = Color( 0.819608, 0.819608, 0.819608, 1 )
custom_fonts/font = ExtResource( 3 )
text = "Spawn Seed Name"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="sed_sn_hbox" type="HBoxContainer" parent="."]
margin_left = 275.0
margin_right = 551.0
margin_bottom = 32.0
size_flags_horizontal = 3

[node name="sed_sn_lineedit" type="LineEdit" parent="sed_sn_hbox"]
margin_right = 215.0
margin_bottom = 32.0
rect_min_size = Vector2( 87, 0 )
size_flags_horizontal = 3
custom_colors/font_color_uneditable = Color( 0.819608, 0.819608, 0.819608, 0.2 )
custom_constants/minimum_spaces = 8
custom_fonts/font = ExtResource( 4 )
max_length = 24
placeholder_text = "Spawn Seed Name"
caret_blink = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="sed_sn_button" type="Button" parent="sed_sn_hbox"]
margin_left = 219.0
margin_right = 247.0
margin_bottom = 32.0
mouse_default_cursor_shape = 2
custom_styles/hover = ExtResource( 9 )
custom_styles/pressed = ExtResource( 8 )
custom_styles/focus = ExtResource( 6 )
custom_styles/normal = ExtResource( 7 )
icon = ExtResource( 1 )
clip_text = true

[node name="sed_sn_reset" parent="sed_sn_hbox" instance=ExtResource( 5 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 251.0
margin_top = 3.0
margin_right = 276.0
margin_bottom = 28.0

[node name="sed_sn_timer" type="Timer" parent="sed_sn_hbox"]
wait_time = 0.05
one_shot = true

[connection signal="text_changed" from="sed_sn_hbox/sed_sn_lineedit" to="." method="_on_sps_note_text_changed"]
[connection signal="pressed" from="sed_sn_hbox/sed_sn_button" to="." method="_on_sps_button_pressed"]
[connection signal="timeout" from="sed_sn_hbox/sed_sn_timer" to="." method="_on_sed_timer_timeout"]
